--- a/calabash-festival/package.json
+++ b/calabash-festival/package.json
@@ -34,7 +34,9 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
     "jquery": "^3.4.1",
+    "ngx-alerts": "^4.0.0",
     "ngx-carousels": "0.0.6",
+    "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
