--- a/rest-api/ormconfig.json
+++ b/rest-api/ormconfig.json
@@ -2,11 +2,11 @@
    "type": "mysql",
    "host": "localhost",
    "port": 3306,
-   "username": "test",
-   "password": "test",
-   "database": "test",
+   "username": "root",
+   "password": "",
+   "database": "calabash-festival",
    "synchronize": true,
-   "logging": false,
+   "logging": true,
    "entities": [
       "src/entity/**/*.ts"
    ],
