--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -4,8 +4,9 @@
    "description": "calabash festival rest api",
    "main": "index.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "tsnodemon -x 'src/index.ts'"
+      "test": "ts-node src/index.ts",
+      "start": "node build/index.js",
+      "build": "tsc -p tsconfig.json"
    },
    "author": "Enchird Entity",
    "license": "ISC",
@@ -19,8 +20,8 @@
    "dependencies": {
       "body-parser": "^1.19.0",
       "express": "^4.17.1",
-      "typeorm": "0.2.19",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.19"
    }
 }
