--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -4,7 +4,7 @@
    "description": "calabash festival rest api",
    "main": "index.js",
    "scripts": {
-      "test": "ts-node src/index.ts",
+      "test": "ts-node-dev src/index.ts",
       "start": "node build/index.js",
       "build": "tsc -p tsconfig.json"
    },
@@ -14,11 +14,13 @@
       "@types/express": "^4.17.1",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
+      "ts-node-dev": "^1.0.0-pre.43",
       "tsnodemon": "^1.2.2",
       "typescript": "3.3.3333"
    },
    "dependencies": {
       "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
