--- a/calabash-festival/angular.json
+++ b/calabash-festival/angular.json
@@ -30,9 +30,13 @@
             "styles": [
               "src/styles.scss",
               "src/assets/lib/bootstrap.min.css",
-              "src/assets/lib/tailwind.min.css"
+              "src/assets/lib/tailwind.min.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js"
+            ]
           },
           "configurations": {
             "production": {
