--- a/calabash-festival/package.json
+++ b/calabash-festival/package.json
@@ -30,8 +30,12 @@
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@ngx-loading-bar/core": "^4.2.0",
+    "@ngx-loading-bar/http-client": "^4.2.0",
     "@ngx-loading-bar/router": "^4.2.0",
+    "angular-datatables": "^8.0.0",
     "crypto-js": "^3.1.9-1",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
     "express": "^4.15.2",
     "jquery": "^3.4.1",
     "ngx-alerts": "^4.0.0",
@@ -46,6 +50,7 @@
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
+    "@types/datatables.net": "^1.10.17",
     "@types/express": "^4.17.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
