--- a/calabash-festival/package.json
+++ b/calabash-festival/package.json
@@ -16,16 +16,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.8",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
     "@angular/forms": "~8.2.8",
+    "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/platform-server": "~8.2.8",
     "@angular/router": "~8.2.8",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
@@ -38,6 +42,7 @@
     "datatables.net-dt": "^1.10.20",
     "express": "^4.15.2",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "ngx-alerts": "^4.0.0",
     "ngx-carousels": "0.0.6",
     "ngx-pagination": "^4.1.0",
